--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,24 @@
+appdirs==1.4.4
 asgiref==3.2.7
 autopep8==1.5.1
+certifi==2020.12.5
 cffi==1.14.0
 cryptography==2.9
+distlib==0.3.1
 Django==3.0.5
 django-rest-knox==4.1.0
 djangorestframework==3.11.0
+filelock==3.0.12
 gunicorn==19.7.1
+importlib-metadata==3.7.0
+pipenv==2020.11.15
 pycodestyle==2.5.0
 pycparser==2.20
 pytz==2019.3
 six==1.14.0
 sqlparse==0.3.1
+typing-extensions==3.7.4.3
+virtualenv==20.4.2
+virtualenv-clone==0.5.4
 whitenoise==3.3.1
+zipp==3.4.0
