--- a/Pipfile
+++ b/Pipfile
@@ -21,6 +21,7 @@ sqlparse = "==0.3.1"
 gunicorn = "==19.7.1"
 whitenoise = "==3.3.1"
 Django = "==3.0.5"
+django-heroku = "*"
 
 [requires]
 python_version = "3.7"
