--- a/Pipfile
+++ b/Pipfile
@@ -4,24 +4,23 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-autopep8 = "*"
 
 [packages]
-djangorestframework = "==3.11.0"
-django-rest-knox = "==4.1.0"
 asgiref = "==3.2.7"
 autopep8 = "==1.5.1"
 cffi = "==1.14.0"
 cryptography = "==2.9"
+django-rest-knox = "==4.1.0"
+djangorestframework = "==3.11.0"
 pycodestyle = "==2.5.0"
 pycparser = "==2.20"
 pytz = "==2019.3"
 six = "==1.14.0"
 sqlparse = "==0.3.1"
 gunicorn = "==19.7.1"
-whitenoise = "==3.3.1"
 Django = "==3.0.5"
-django-heroku = "*"
+whitenoise = "*"
+django-utils-six = "*"
 
 [requires]
 python_version = "3.7"
